[package]
name = "lmarkov"
version = "0.1.0"
authors = ["Andrew Abbott <mirrexagon@mirrexagon.com>"]
edition = "2018"

[features]
serialization = ["serde", "serde_json"]

[dependencies]
rand = "0.7"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
